The Great Rewrite
cleaned everything up + rewrote some stuff. in brief;
- fixed inconsistent error logging (all goes to stderr, no longer sends pregenerated images)
- .clang-format rules
- split stuff up (mathtex.h, md5.c/h)
- rewrote cli flag handler
- removed calendar generation code
- removed (most, not all) cgi and http-related code
- some other non-noteworthy micro-optimizations...

--- a/mathtex.html
+++ b/mathtex.html
@@ -168,6 +168,9 @@
 <!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 + Banner across top of page containing title and two example mathTeX images
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+<div style="color: red; font-size: 2em;">
+NOTE: This html doc is outdated and not reflective of what this program does. Keeping it here for historical reference.
+</div>
 <br>
 <hr size=4>
 <center>
